--- a/web/templates/layout.phtml
+++ b/web/templates/layout.phtml
@@ -1,3 +1,11 @@
+<?php
+/*
+	$leagues [] "name", "id"
+	$title
+	$description
+	$widgets [] 
+*/
+?>
 <!doctype html>
 <html>
 <head>
@@ -5,14 +13,29 @@
 <body>
 	<header>
 		header
+		<nav>
+			<ul>
+				<?php
+				foreach($leagues as $league) { 
+					?>
+					<li><a href="#"><?php echo $league["name"]; ?></a></li>
+					<?php
+				}			
+				?>
+			</ul>
+		</nav>
 	</header>
 	<section>
-		<h1><?php echo $title; ?></h1>
-		<?php echo $description; ?>
+		<?php if (isset($title)) { ?>
+			<h1><?php echo $title; ?></h1>
+		<?php } ?>
+		<?php if (isset($description)) { ?>
+			<?php echo $description; ?>
+		<?php } ?>
 	</section>
 	<?php 
 	foreach($widgets as $widget) { 
-		$this->view->render($response, "./widgets/" . $widget .".phtml", []);
+		echo $this->fetch("./widgets/" . $widget .".phtml", []);
 	}
 	?>
 	<footer>
